tests/errors/return_type.b
fn foo() -> int {
    return "hello";
}

fn main() {
}
